[gd_scene load_steps=6 format=3 uid="uid://dum7j0gkfxskh"]

[ext_resource type="Script" uid="uid://bg6qvse0f5q5n" path="res://scripts/main_menu.gd" id="1_hfmus"]
[ext_resource type="Texture2D" uid="uid://8en7parecgy6" path="res://assets/marble bg.jpg" id="2_1sy2y"]
[ext_resource type="Texture2D" uid="uid://b2iqr8pphu81h" path="res://assets/buttons/Play Button.png" id="3_hfmus"]
[ext_resource type="Texture2D" uid="uid://cd834sf24cfon" path="res://assets/buttons/Quit Button.png" id="4_ycuad"]
[ext_resource type="Script" uid="uid://cxmbfrl7wtckn" path="res://scripts/scoreboard_menu.gd" id="6_pp1gj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hfmus")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = -2.0
offset_right = 1172.0
offset_bottom = 718.0
texture = ExtResource("2_1sy2y")

[node name="LevelMenu" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 542.0
offset_top = 311.0
offset_right = 790.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level1Button" type="Button" parent="LevelMenu"]
layout_mode = 2
theme_override_constants/icon_max_width = 300
theme_override_font_sizes/font_size = 40
text = "LEVEL 01"

[node name="Level2Button" type="Button" parent="LevelMenu"]
layout_mode = 2
theme_override_constants/icon_max_width = 300
theme_override_font_sizes/font_size = 40
text = "LEVEL 02"

[node name="Level3Button" type="Button" parent="LevelMenu"]
layout_mode = 2
theme_override_constants/icon_max_width = 300
theme_override_font_sizes/font_size = 40
text = "LEVEL 03"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 820.0
offset_top = 296.0
offset_right = 1128.0
offset_bottom = 404.0

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/icon_max_width = 300
theme_override_font_sizes/font_size = 40
text = "TUTORIAL"

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/icon_max_width = 300
icon = ExtResource("3_hfmus")

[node name="PlayByLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/icon_max_width = 300
theme_override_font_sizes/font_size = 40
text = "PLAY BY LEVEL"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 901.0
offset_top = 550.0
offset_right = 1059.0
offset_bottom = 629.0

[node name="ExitButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/icon_max_width = 150
icon = ExtResource("4_ycuad")

[node name="ScoreboardMenu" type="CanvasLayer" parent="."]
script = ExtResource("6_pp1gj")

[node name="Panel" type="Panel" parent="ScoreboardMenu"]
anchors_preset = -1
anchor_left = 0.0269097
anchor_top = 0.270062
anchor_right = 0.8
anchor_bottom = 0.270062
offset_left = 42.0
offset_top = -132.0
offset_right = -480.6
offset_bottom = 272.0

[node name="Header" type="HBoxContainer" parent="ScoreboardMenu/Panel"]
layout_mode = 0
offset_left = 23.0
offset_top = 29.0
offset_right = 346.0
offset_bottom = 87.0

[node name="RecapLabel" type="Label" parent="ScoreboardMenu/Panel/Header"]
layout_mode = 2

[node name="Body" type="HBoxContainer" parent="ScoreboardMenu/Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 102.0
offset_right = 342.0
offset_bottom = 378.0

[node name="ScoreList" type="ItemList" parent="ScoreboardMenu/Panel/Body"]
layout_mode = 2

[node name="DetailsLabel" type="Label" parent="ScoreboardMenu/Panel/Body"]
layout_mode = 2
